--- a/core/core.gradle
+++ b/core/core.gradle
@@ -33,7 +33,16 @@ dependencies {
     compile "org.springframework:spring-context:4.3.7.RELEASE"
     compile "org.springframework:spring-core:4.3.7.RELEASE"
     compile "org.springframework:spring-beans:4.3.7.RELEASE"
+    compile "com.jcraft:jsch:0.1.44-1"
+    compile "commons-io:commons-io:2.5"
+    compile "org.apache.commons:commons-lang3:3.5"
+    compile "org.apache.commons:commons-csv:1.3"
     compile "org.slf4j:log4j-over-slf4j:1.7.24"
+    compile "commons-net:commons-net:3.6"
+    compile "org.yaml:snakeyaml:1.9"
+    compile "org.freemarker:freemarker:2.3.14"
+    compile "org.seleniumhq.selenium:selenium-java:3.5.2"
+    compile "org.apache.commons:commons-email:1.5"
 	// Use JUnit test framework
     testCompile 'junit:junit:4.12'
     testCompile 'org.easymock:easymock:3.4'  
